kubernetes/aks/apps/ailab/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ailab
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ailab
  template:
    metadata:
      labels:
        app: ailab
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: ailab
          image: ghcr.io/ai-cfia/ai-cfia-ia-acia.github.io:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: ailab-svc
spec:
  clusterIP: None
  selector:
    app: ailab
  ports:
    - protocol: TCP
      port: 3000
